Enhance repository tests with additional setup and assertions; improve `BookRepositoryTest` and `BookGenreRepositoryTest` readability; remove unused import in `BookController`.